Change log for Bos Wars
-----------------------

Development version:
- Fixed bug #30856: Workers swich to other resourse type after one deposit complete (Kalle Olavi Niemitalo)
- New arrow and cross cursor graphics (Leonid Gutmann)
- Added "terrain" build restriction (Kalle Olavi Niemitalo)
- Added the Tokelau map (Michiel van der Wulp)
- Added the Volcanic Grounds map (Michiel van der Wulp)
- Added the Chilka map (Michiel van der Wulp)
- Added undo groups to the map editor (Kalle Olavi Niemitalo)
- Added ctrl-shift-t hotkey in the editor to tile the selected patch (Jimmy Salmon)
- Added patch themes (Jimmy Salmon)
- Fixed bug #30173: Map editor should require at least one player type to be a person (Jimmy Salmon)
- Fixed bug #29740: Map editor adds units even if dragging began in the sidebar (Jimmy Salmon)
- Fixed bug #30164: Map editor doesn't close terrain file (Jimmy Salmon)
- Fixed bug #30244: Crash with some map sizes in minimap (Francois Beerten)
- Added Clover map (Michiel van der Wulp)
- Fixed bug #30112: How to set the default for "Fog of War" in "Start Game" is not obvious (Kalle Olavi Niemitalo)
- Added AllowTerrain* flags in DefineUnitType (Kalle Olavi Niemitalo)
- Distinguish between shallow and deep water (Kalle Olavi Niemitalo)
- Added Gosh patches (Tejay Penfold)
- Added Shipyard (Tejay Penfold and Francois Beerten)
- Added "Show Terrain Attributes" to the map editor (Kalle Olavi Niemitalo)
- Fixed bug #29731: Replacing patches in the map editor discards CMapField::Flags set because of units (Kalle Olavi Niemitalo)
- Added Multiple Fronts map (Michiel van der Wulp)
- Added a file browser and a size suggestion to Create New Patch (Kalle Olavi Niemitalo)
- Added Atoll Walk map (Michiel van der Wulp)
- Added destroyer ship (Tejay Penfold and Francois Beerten)
- Added water scout unit (Tejay Penfold and Francois Beerten)
- Fixed TextField crash on shift+arrow after backspace (Kalle Olavi Niemitalo)